--- a/Gevers-Autogarage/Gevers-Autogarage.csproj
+++ b/Gevers-Autogarage/Gevers-Autogarage.csproj
@@ -98,6 +98,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CarWindow.xaml.cs">
+      <DependentUpon>CarWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Car.cs" />
     <Compile Include="Classes\DbClass.cs" />
     <Compile Include="Classes\Session.cs" />
     <Compile Include="Classes\User.cs" />
@@ -107,6 +111,10 @@
     <Compile Include="TradeValueWindow.xaml.cs">
       <DependentUpon>TradeValueWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="CarWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
