--- a/Gevers-Autogarage/Gevers-Autogarage.csproj
+++ b/Gevers-Autogarage/Gevers-Autogarage.csproj
@@ -101,6 +101,7 @@
     <Compile Include="CarWindow.xaml.cs">
       <DependentUpon>CarWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Accessoires.cs" />
     <Compile Include="Classes\Car.cs" />
     <Compile Include="Classes\DbClass.cs" />
     <Compile Include="Classes\Session.cs" />
