--- a/Gevers-Autogarage/Gevers-Autogarage.csproj
+++ b/Gevers-Autogarage/Gevers-Autogarage.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Classes\DbClass.cs" />
     <Compile Include="Classes\Session.cs" />
     <Compile Include="Classes\User.cs" />
+    <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
@@ -170,6 +171,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GeversLogic\GeversLogic.csproj">
+      <Project>{472369ba-d2d0-4227-a315-a29588244e40}</Project>
+      <Name>GeversLogic</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
