--- a/GeversLogic/GeversLogic.csproj
+++ b/GeversLogic/GeversLogic.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GeversData\GeversData.csproj" />
+  </ItemGroup>
+
 </Project>
