--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 *.userosscache
 *.sln.docstates
 
+#Dont commit config file
+.config
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
