--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 *.sln.docstates
 
 #Dont commit config file
-.config
+*.config
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
