Instantiate Company with Interface ICompanyStorage - TODO: Instantiate IUserStorage interface

--- a/GeversView/GeversView.csproj
+++ b/GeversView/GeversView.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GeversData\GeversData.csproj" />
     <ProjectReference Include="..\GeversLogic\GeversLogic.csproj" />
   </ItemGroup>
 
