--- a/GeversData/GeversData.csproj
+++ b/GeversData/GeversData.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GeversLogic\GeversLogic.csproj" />
+  </ItemGroup>
+
 </Project>
